# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpm_api"
description = "Python Package for the Global Precipitation Measurement (GPM) Mission Data Archive"
readme = "README.md"
authors = [
	{ name = "Gionata Ghiggi", email = "gionata.ghiggi@epfl.ch" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: Unix",
    "Operating System :: Microsoft",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["GPM", "Precipitation", "API", "DPR", "PMW", "IMERG"]
dependencies = [
    "xarray<=2024.2.0", # ongoing xarray datatree migration
    "xarray-datatree",  # to be deprecated as soon datatree in xarray is working
    "netcdf4",
    "dask",
    "distributed",
    "tqdm",
    "click",
    "donfig",
    "trollsift",
    "matplotlib>=3.8.3", # introduce pcolormesh rgb
    "cartopy>=0.22.0",
    "pyproj",
    "scipy",
    "pycolorbar",
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pre-commit", "loghub",
       "black[jupyter]", "blackdoc", "codespell", "ruff",
       "pytest", "pytest-cov", "pytest-mock", "pytest-check", "pytest-sugar",
       "pytest-watcher", "deepdiff",
       "pip-tools", "bumpver", "twine", "wheel", "build", "setuptools>=61.0.0",
       "ximage", "pyvista", "polars", "pyarrow", "pyresample", "h5py",
       "sphinx", "sphinx-gallery", "sphinx-book-theme", "nbsphinx", "sphinx_mdinclude"]

[project.urls]
homepage = "https://github.com/ghiggi/gpm_api"
repository = "https://github.com/ghiggi/gpm_api"
source = "https://github.com/ghiggi/gpm_api"
tracker = "https://github.com/ghiggi/gpm_api/issues"
documentation = "https://gpm-api.readthedocs.io"
changelog = "https://github.com/ghiggi/gpm_api/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
write_to = "gpm/_version.py"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["gpm*"]

[project.scripts]
download_gpm_daily_data="gpm.scripts.download_gpm_daily_data:download_gpm_daily_data"
download_gpm_monthly_data="gpm.scripts.download_gpm_monthly_data:download_gpm_monthly_data"
download_gpm_files="gpm.scripts.download_gpm_files:download_gpm_files"

[tool.pytest.ini_options]
addopts = "--ignore=gpm/tests/0_tmp/ --cov --cov-report term-missing --cov-report xml --cov-report lcov:lcov.info --check-max-report=10"

[tool.black]
line-length = 120
# skip-string-normalization = true
target-version = [
    "py39",
    "py310",
    "py311",
]

[tool.ruff]
line-length = 120
indent-width = 4

# Addional file to be formatted by ruff (in addition to *py)
extend-include = ["*.ipynb"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "docs",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pydocstyle
    "D",
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-quotes
    "Q",
    # flake8-bugbear
    "B",
    # flake8-return
    "RET",
    # flake8-unused-arguments
    "ARG",
    # flake8-raise
    "RSE",
    # flake8-pytest-style
    "PT",
    # flake8-simplify
    "SIM",
    # Perflint
    "PERF",
    # pandas-vet
    "PD",
    # pylint
    "PL",
    # flake8-commas
    "COM",
    # flake8-slots
    "SLOT",
    # flake8-comprehensions
    "C4",
    # Ruff custom rules
    "RUF"

    #---------------------
    #### Future rules ####
    # flake8-use-pathlib
    # "PTH",
    # NumPy-specific rules  (for 2.0)
    # "NPY",
    # refurb
    # "FURB", # require preview

]
ignore = [
    "E722",
    "B904",
    "B006", # {} defaults in function arguments
    "PT011", # pytest raised error must be checked if match the expected error msg
    "PERF203",
    "PD901",
    "PLW2901",
    "PLW0603",
    "RUF012",
    "RUF015",
    # Docstyle Rules
    "D404", # Docstring can't start with "This"
    "D401", # First sentence must be in imperative mood
    "D100", "D101","D102", "D103", "D104", "D105",  # Missing docstrings
    # Complexity rules
    "PLR0913", # restrict max number of function argument
    "PLR2004",
    "PLR0912",
    "PLR0915",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all Jupyter Notebooks.
"*.ipynb" = ["E402"]
# Rules to ignore in test files
"test_*.py" = [
    "ARG",  # avoid problems with fixtures
    "D100", "D101","D102", "D103", "D104", "D105",  # Missing docstrings
]
"setup.py" = ["D100"]
"*__init__.py" = ["D104"]


[tool.codespell]
    ignore-words-list = "ges,nd"
