# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpm_api"
description = "Python Package for the Global Precipitation Measurement (GPM) Mission Data Archive"
readme = "README.md"
authors = [
	{ name = "Gionata Ghiggi", email = "gionata.ghiggi@epfl.ch" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: Unix",
    "Operating System :: Microsoft",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["GPM", "Precipitation", "API", "DPR", "PMW", "IMERG"]
dependencies = [
    "xarray>=2025.01.0",
    "xoak",
    "netcdf4",
    "dask",
    "distributed",
    "tqdm",
    "click",
    "pyyaml",
    "donfig",
    "trollsift",
    "matplotlib>=3.8.3", # introduce pcolormesh rgb
    "cartopy>=0.22.0",
    "pyproj",
    "numpy",
    "pandas",
    "scipy",
    "pycolorbar>=0.1.2",
]
requires-python = ">=3.10"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pre-commit", "loghub",
       "black[jupyter]", "blackdoc", "codespell", "ruff",
       "pytest", "pytest-cov", "pytest-mock", "pytest-check", "pytest-sugar",
       "pytest-watcher", "deepdiff",
       "pip-tools", "bumpver", "twine", "wheel", "build", "setuptools>=61.0.0",
       "ximage", "pyvista", "polars", "pyarrow", "pyresample", "h5py", "xoak", "scikit-learn",
       "sphinx", "sphinx-gallery", "sphinx-book-theme", "nbsphinx", "sphinx_mdinclude"]

[project.urls]
homepage = "https://github.com/ghiggi/gpm_api"
repository = "https://github.com/ghiggi/gpm_api"
source = "https://github.com/ghiggi/gpm_api"
tracker = "https://github.com/ghiggi/gpm_api/issues"
documentation = "https://gpm-api.readthedocs.io"
changelog = "https://github.com/ghiggi/gpm_api/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
write_to = "gpm/_version.py"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["gpm*"]

[project.scripts]
download_gpm_daily_data="gpm.scripts.download_gpm_daily_data:download_gpm_daily_data"
download_gpm_monthly_data="gpm.scripts.download_gpm_monthly_data:download_gpm_monthly_data"
download_gpm_files="gpm.scripts.download_gpm_files:download_gpm_files"

[tool.pytest.ini_options]
minversion = "7"
addopts = "-ra --strict-config --strict-markers --cov --cov-report term-missing --cov-report xml --cov-report lcov:lcov.info --check-max-report=10"
xfail_strict = true
# filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [
  "gpm/tests",
]

[tool.black]
line-length = 120
# skip-string-normalization = true
target-version = [
    "py39",
    "py310",
    "py311",
]

[tool.ruff]
line-length = 120
indent-width = 4

# Addional file to be formatted by ruff (in addition to *py)
extend-include = ["*.ipynb"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "docs",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pydocstyle
    "D",
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-quotes
    "Q",
    # flake8-bugbear
    "B",
    # flake8-return
    "RET",
    # flake8-unused-arguments
    "ARG",
    # flake8-raise
    "RSE",
    # flake8-pytest-style
    "PT",
    # flake8-simplify
    "SIM",
    # Perflint
    "PERF",
    # pandas-vet
    "PD",
    # pylint
    "PL",
    # flake8-commas
    "COM",
    # flake8-slots
    "SLOT",
    # flake8-comprehensions
    "C4",
    # Ruff custom rules
    "RUF",
    # NumPy-specific rules  (for 2.0)
    "NPY",
    #---------------------
    #### Future rules ####
    # flake8-use-pathlib
    # "PTH",
    # refurb
    # "FURB", # require preview

]
ignore = [
    "E722",
    "B904",
    "B006", # {} defaults in function arguments
    "PT011", # pytest raised error must be checked if match the expected error msg
    "PERF203",
    "UP038",
    # "PD011", # suggest values --> to_numpy
    "PD901",
    "PD013", # suggest melt instead of stack
    "PLW2901",
    "PLW0603",
    "RUF012",
    "RUF015",
    "RET504",
    # Docstyle Rules
    "D404", # Docstring can't start with "This"
    "D401", # First sentence must be in imperative mood
    "D100", "D101","D102", "D103", "D104", "D105",  # Missing docstrings
    # Complexity rules
    "PLR0913", # restrict max number of function argument
    "PLR2004",
    "PLR0912",
    "PLR0915",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all Jupyter Notebooks.
"*.ipynb" = ["E402"]
# Rules to ignore in test files
"test_*.py" = [
    "ARG",  # avoid problems with fixtures
    "D100", "D101","D102", "D103", "D104", "D105",  # Missing docstrings
]
"setup.py" = ["D100"]
"*__init__.py" = ["D104"]

[tool.doc8]
ignore-path = [
    "docs/build",
    "docs/api/generated",
    "docs/_templates",
    "docs/tutorials",
    "docs/examples",
]
file-encoding = "utf8"
max-line-length = 120
ignore = ["D001"]

[tool.codespell]
ignore-words-list = "ges,nd"
