[metadata]
name = gpm_api
version = 0.1.1
author = 
    Gionata Ghiggi
    Randy J. Chase
email = 
    gionata.ghiggi@gmail.com
    randy.chase12@gmail.com
description = Phyton API for Global Precipitation Mission Data
url = https://github.com/ghiggi/gpm_api
project_urls =
    Code=https://github.com/ghiggi/gpm_api
    Issues=https://github.com/ghiggi/gpm_api/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Precipitation, Radar, Hydrometeorology  
    Topic :: API

[options]
packages = find:
install_requires = 
    h5py
    xarray
    dask
    cartopy
    curl 
    wget

python_requires = >=3.6
setup_requires =
    setuptools>=42
    whee
